add_library(nets OBJECT  
							lstmnet.cpp
							fcnet.cpp
							NetDef.cpp
							FixedKernelNetDef.cpp
							FixedFcNet.cpp
							purefcnet.cpp
							cnnnet.cpp
							grunet.cpp
							grustep.cpp
							fcgrunet.cpp
							cnngrunet.cpp
							lstm2net.cpp
							cnngrutransfer.cpp
							rnnmasknet.cpp
							)