add_library(tenhouclient OBJECT tenhoumsgparser.cpp
								tenhoumsggenerator.cpp
								logger.cpp
								filepolicy.cpp
								netproxy.cpp
								randomnet.cpp
								tenhouconn.cpp
								tenhoufsm.cpp
								tenhoufsmstate.cpp
								tenhoumsgutils.cpp
								tenhoupolicy.cpp
								tenhoustate.cpp
							)